# classify-speakers

./: CONTRIBUTING.md  LICENSE  README.md  mac-setup.sh  pyproject.toml
classify_speakers/feature_extraction/: __init__.py
classify_speakers/feature_selection/: benchmarking.py  optimization.py
classify_speakers/notebooks/: ECE_114_Project.ipynb  sample.ipynb
classify_speakers/preprocessing/: __init__.py
classify_speakers/tests/: test_classify_speakers.py
