[tool.poetry]
name = "classify_speakers"
version = "0.0.0"
description = "classify speakers by regional dialect."
authors = ["Yassin Kortam", "Qianying Lu", "Deena Sadegh"]
license = "BSD4"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ipython = "^8.13.1"
ipykernel = "^6.6.0"
pandas = "1.5.3"
numpy = "^1.17"
scipy = "^1.9.0"
scikit-learn = "^1.2.2"
seaborn = "^0.12.2"
matplotlib = "^3.5.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.2.2"
ruff = "^0.1.0"
pytest = "^7.3.1"
black = "^21.12b0"